[package]
name = "glog"
version = "0.1.0"
authors = ["Christoph Schlosser <christoph@linux.com>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
log = { version = "0.4.11", features = ["std"] }
thread_local = "~1.0"
termcolor = "~1.1"
chrono = "0.4.10"
[target.'cfg(windows)'.dependencies]
windows = "0.11.0"
[target.'cfg(unix)'.dependencies]
nix = "0.21.0"
backtrace = "0.3.60"
gethostname = "0.2.1"
whoami = "1.1.2"
if_empty = "0.2.0"

