[package]
name = "glog"
version = "0.1.0"
authors = ["Christoph Schlosser <christoph@linux.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "glog style logging backend"
homepage = "https://crates.io/crates/glog"
repository = "https://github.com/cschlosser/glog-rs"
readme = "README.md"
keywords = ["glog", "log", "logging backend"]
documentation = "https://docs.rs/glog/0.1.0/"

[dependencies]
log = { version = "0.4.11", features = ["std"] }
thread_local = "~1.0"
termcolor = "~1.1"
chrono = "0.4.10"
backtrace = "0.3.60"
gethostname = "0.2.1"
whoami = "1.1.2"
if_empty = "0.2.0"
bimap = "0.6.1"
once_cell = "1.8.0"

[target.'cfg(windows)'.dependencies]
windows = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = "0.21.0"

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
windows = "0.11.0"
